--- a/index.html
+++ b/index.html
@@ -11,58 +11,46 @@
       <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <article>
-        <section class="add-item-section">
-          <form class="add-item-section__form">
-            <label id="add-item-section__form__label">Add Item</label>
-            <div class="add-item-section__form__task-row">
-              <input id="add-item-section__form__task-row__input" type="text">
-              <button id="add-item-section__form__task-row__button">Add</button>
-            </div>
-          </form>
-        </section>
-        <section class="to-do-section">
-          <h3 class="to-do-section__header">Todo</h3>
-          <form class="to-do-section__form">
-            <ul id="to-do-section__form__incomplete-tasks">
-              <li class="to-do-section__task">
-                <input class="to-do-section__checkbox" type="checkbox">
-                <label class="to-do-section__label">Pay Bills</label>
-                <input class="to-do-section__input" type="text" >
-                <button class="to-do-section__button to-do-section__button--edit">Edit</button>
-                <button class="to-do-section__button to-do-section__button--delete">
-                  <img class="to-do-section__img" src="./remove.svg" alt="Delete">
-                </button>
-              </li>
-              <li class="to-do-section__task to-do-section__task--edit-mode">
-                <input class="to-do-section__checkbox" type="checkbox">
-                <label class="to-do-section__label">Go Shopping</label>
-                <input class="to-do-section__input to-do-section__input--edit-mode" type="text" value="Go Shopping" >
-                <button class="to-do-section__button to-do-section__button--save">Save</button>
-                <button class="to-do-section__button to-do-section__button--delete">
-                  <img class="to-do-section__img" src="./remove.svg" alt="Delete">
-                </button>
-              </li>
-            </ul>
-          </form>
-        </section>
-        <section class="completed-section">
-          <h3 class="completed-section__header">Completed</h3>
-          <form class="completed-section__form">
-            <ul id="completed-section__form__completed-tasks">
-              <li class="completed-section__task">
-                <input class="completed-section__checkbox" type="checkbox" checked>
-                <label class="completed-section__label">See the Doctor</label>
-                <input class="completed-section__input" type="text">
-                <button class="completed-section__button completed-section__button--edit">Edit</button>
-                <button class="completed-section__button completed-section__button--delete">
-                  <img class="completed-section__img" src="./remove.svg" alt="Delete">
-                </button>
-              </li>
-            </ul>
-          </form>
-        </section>
-      </article>
+      <form class="add-item__form">
+        <label class="add-item__form__label">Add Item</label>
+        <div class="add-item__form__task-row">
+          <input class="add-item__form__task-row__input" type="text">
+          <button class="add-item__form__task-row__button">Add</button>
+        </div>
+      </form>
+      <h3 class="to-do__header">Todo</h3>
+      <ul class="to-do__incomplete-tasks">
+        <li class="to-do__task">
+          <input class="to-do__checkbox" type="checkbox">
+          <label class="to-do__label task">Pay Bills</label>
+          <input class="to-do__input task" type="text" >
+          <button class="to-do__button_edit">Edit</button>
+          <button class="to-do__button_delete">
+            <img class="to-do__img" src="./remove.svg" alt="Delete">
+          </button>
+        </li>
+        <li class="to-do__task to-do__task__edit-mode">
+          <input class="to-do__checkbox" type="checkbox">
+          <label class="to-do__label task">Go Shopping</label>
+          <input class="to-do__input task" type="text" value="Go Shopping">
+          <button class="to-do__button_edit">Save</button>
+          <button class="to-do__button_delete">
+            <img class="to-do__img" src="./remove.svg" alt="Delete">
+          </button>
+        </li>
+      </ul>
+      <h3 class="to-do__header">Completed</h3>
+      <ul class="completed-tasks">
+        <li class="complete__task">
+          <input class="to-do__checkbox" type="checkbox" checked>
+          <label class="to-do__label task">See the Doctor</label>
+          <input class="to-do__input task" type="text">
+          <button class="to-do__button_edit">Edit</button>
+          <button class="to-do__button_delete">
+            <img class="to-do__img" src="./remove.svg" alt="Delete">
+          </button>
+        </li>
+      </ul>
     </main>
     <script src="app.js"></script>
   </body>
